frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 80
